--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,15 @@
 {
-  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "node --watch --trace-warnings ./src/index.js"
+    "dev": "node --watch ./src/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cls-hooked": "^4.2.2",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
