--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cls-hooked": "^4.2.2",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
