--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cls-hooked": "^4.2.2",
     "connect-timeout": "^1.9.0",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "uuid": "^9.0.1"
   }
 }
